edit a-scene position

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
       <!-- <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky> -->
-      <a-cylinder position="0 0 0" radius="2" height="1" color="#F5F5EE"></a-cylinder>
-      <a-cylinder position="0 0 1" radius="1" height="1" color="#F5F5EE"></a-cylinder>
-      <a-sphere position="0 0 2" radius="1" color="#F5C651"></a-sphere>
+      <a-cylinder position="-1 -1 0" radius="2" height="1" color="#F5F5EE"></a-cylinder>
+      <a-cylinder position="-1 -1 1" radius="1" height="1" color="#F5F5EE"></a-cylinder>
+      <a-sphere position="-1 -1 2" radius="1" color="#F58732"></a-sphere>
     </a-scene>
   </body>
 </html>
