--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   </head>
   <body>
     <a-scene>
-      <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
-      <!-- <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky> -->
-      <a-cylinder position="10 0 0" radius="2" height="1" color="#F5F5EE"></a-cylinder>
-      <a-cylinder position="10 1 0" radius="1" height="1" color="#F5F5EE"></a-cylinder>
-      <a-sphere position="10 2 0" radius="0.5" color="#F58732"></a-sphere>
+      <a-cylinder position="0 0 -10" radius="2" height="1" color="#F5F5EE"></a-cylinder>
+      <a-cylinder position="0 1 -10" radius="1" height="1" color="#F5F5EE"></a-cylinder>
+      <a-sphere position="0 2 -10" radius="0.5" color="#F58732"></a-sphere>
+      <a-sphere position="0 2.6 -10" radius="0.1" color="#267517"></a-sphere>
     </a-scene>
   </body>
 </html>
