--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <a-cylinder position="0 1 -10" radius="1" height="1" color="#F5F5EE"></a-cylinder>
       <a-sphere position="0 2 -10" radius="0.5" color="#F58732"></a-sphere>
       <a-sphere position="0 2.6 -10" radius="0.1" color="#267517"></a-sphere>
+      <a-text position="0 1.25 -1" value="happy New Year!!" color="#000000" align="center"></a-text>
     </a-scene>
   </body>
 </html>
