--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
   <head>
-    <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR鏡餅</title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@butanokeiton" />
+    <meta name="twitter:creator" content="@butanokeiton" />
+    <meta property="og:url" content="https://penguinspizza.github.io/ar-test2/" />
+    <meta property="og:title" content="AR鏡餅" />
+    <meta property="og:description" content="AR.js+A-Frameで作った試作品" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/penguinspizza/ar-test2/main/nenga_mark20_kagamimochi.png" />
+    <meta name="description" content="AR.js+A-Frameで作った試作品">
+    <script src="https://aframe.io/releases/master/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
