--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="AR.js+A-Frameで作った試作品" />
     <meta property="og:image" content="https://raw.githubusercontent.com/penguinspizza/ar-test2/main/nenga_mark20_kagamimochi.png" />
     <meta name="description" content="AR.js+A-Frameで作った試作品">
-    <script src="https://aframe.io/releases/master/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
